Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35608

Fake PMEM on /dev/shm no longer works

    XMLWordPrintable

Details

    Description

      MDEV-34062 introduced an unintended regression: On Linux, /dev/shm would no longer be treated as if it were PMEM. Having memory-mapped reads and writes of the ib_logfile0 makes it more convenient to debug recovery bugs especially in rr replay.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.