MDEV-35608 Fake PMEM on /dev/shm no longer works

In commit 6acada713a95a605b3aa65bd519fbd4532ad23e5 the
logic for treating the file system of /dev/shm
as if it were persistent memory was broken.

Let us restore the original logic, so that we will have
some more CI coverage of the memory-mapped redo log interface.